--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
                   focus:ring-offset-2 focus:ring-indigo-500 mt-2">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                     </span>
-                    Ayo!
+                    Lets Go!
                   </button>
                 </div> 
                 <div class="text-center">
